<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fading_gradient"
    tools:context=".ForgotPassword">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/SignInLogo_tv"
                android:layout_width="154dp"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:text="@string/society_you_logo"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ForgotLogInHeader_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="140dp"
                android:text="@string/forgotLoginHeader"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignInLogo_tv" />

            <TextView
                android:id="@+id/ForgotPasswordGetYouBackIn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/getYouBackInHeader"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ForgotLogInHeader_tv" />

            <EditText
                android:id="@+id/ForgotPasswordEmail_et"
                android:layout_width="265dp"
                android:layout_height="32dp"
                android:layout_marginEnd="59dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="59dp"

                android:layout_marginStart="60dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/background_light"
                android:hint="@string/signInEmailBox"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordGetYouBackIn_tv" />

            <Button

                android:id="@+id/ForgotPasswordReset_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="96dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="68dp"
                android:text="@string/reset"
                android:theme="@style/WhiteButton"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/ForgotPasswordSignIn_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordEmail_et" />

            <Button
                android:id="@+id/ForgotPasswordSignIn_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="112dp"
                android:layout_marginRight="112dp"
                android:layout_marginTop="68dp"
                android:text="@string/signInSignInButton"
                android:theme="@style/BlueButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ForgotPasswordReset_btn"
                app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordEmail_et" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>